// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<reserveResolvedText /> when reservation request is failed should contain error text 1`] = `
<Fragment>
  <p>
    프로그램 오류로 예약신청이 전송되지 않았습니다. 유청으로 전화해주시기 바랍니다. 불편을 끼쳐드려 죄송합니다.
     
    <br />
    <br />
    <a
      className="b"
      href="tel:+82-54-745-0999"
    >
      상담전화 
      <span>
         (054) 745 - 0999
      </span>
    </a>
  </p>
  <div
    className="mt2"
  >
    <WithStyles(Button)
      className={
        Object {
          "margin": "",
          "paddingBottom": "5px",
          "paddingTop": "5px",
          "width": "6em",
        }
      }
      color="secondary"
      onClick={[MockFunction]}
      variant="outlined"
    >
      닫기
    </WithStyles(Button)>
  </div>
</Fragment>
`;

exports[`<reserveResolvedText /> when reservation request is successfully made should contain success text 1`] = `
<Fragment>
  <p>
    예약 상담과 확정을 위해 24시간 이내로 연락을 드리겠습니다. 만약 연락을 못받으시면, 유청으로 연락주시길 바랍니다.
  </p>
  <div
    className="mt2"
  >
    <WithStyles(Button)
      className={
        Object {
          "margin": "",
          "paddingBottom": "5px",
          "paddingTop": "5px",
          "width": "6em",
        }
      }
      color="secondary"
      onClick={[MockFunction]}
      variant="outlined"
    >
      닫기
    </WithStyles(Button)>
  </div>
</Fragment>
`;
